--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -32,7 +32,7 @@
 #
 # Enable this option to make the PS2 mouse driver compatible with his
 # fork.
-CONFIG_ZMK_INPUT_MOUSE_PS2_ENABLE_UROB_COMPAT=n
+#CONFIG_ZMK_INPUT_MOUSE_PS2_ENABLE_UROB_COMPAT=n
 
 # Enable additional error mitigations to prevent cursor jumps
 # Disabled by default and only recommended if using the GPIO PS2 driver
