--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,6 +1,10 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
-
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_LOGGING_MINIMAL=y
+CONFIG_PS2_LOG_LEVEL_DBG=n
+CONFIG_UART_LOG_LEVEL_DBG=n
+CONFIG_LOG_MODE_IMMEDIATE=n
 # Uncomment the following line to enable the Sofle OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
