--- a/build.yaml
+++ b/build.yaml
@@ -19,8 +19,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: sofle_tp_left
+    shield: sofle_left
   - board: nice_nano_v2
-    shield: sofle_tp_right
+    shield: sofle_right
   - board: nice_nano_v2
     shield: settings_reset
